xv6/xv6-public/runtests.log
starting build

**********************************************************************

Test build
build xv6 using make

**********************************************************************
Trying to build project using make
make xv6.img fs.img
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie -fno-pic -O -nostdinc -I. -c bootmain.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie -fno-pic -nostdinc -I. -c bootasm.S
ld -m    elf_i386 -N -e start -Ttext 0x7C00 -o bootblock.o bootasm.o bootmain.o
objdump -S bootblock.o > bootblock.asm
objcopy -S -O binary -j .text bootblock.o bootblock
./sign.pl bootblock
boot block is 451 bytes (max 510)
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o bio.o bio.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o console.o console.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o exec.o exec.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o file.o file.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o fs.o fs.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o ide.o ide.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o ioapic.o ioapic.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o kalloc.o kalloc.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o kbd.o kbd.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o lapic.o lapic.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o log.o log.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o main.o main.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o mp.o mp.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o picirq.o picirq.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o pipe.o pipe.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o proc.o proc.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o sleeplock.o sleeplock.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o spinlock.o spinlock.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o string.o string.c
gcc -m32 -gdwarf-2 -Wa,-divide   -c -o swtch.o swtch.S
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o syscall.o syscall.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o sysfile.o sysfile.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o sysproc.o sysproc.c
In file included from sysproc.c:11:
file.h:17:20: error: field ‘lock’ has incomplete type
   17 |   struct sleeplock lock; // protects everything below here
      |                    ^~~~
file.h:25:14: error: ‘NDIRECT’ undeclared here (not in a function)
   25 |   uint addrs[NDIRECT+1];
      |              ^~~~~~~
sysproc.c:14: error: "KERNBASE" redefined [-Werror]
   14 | #define KERNBASE 536870912
      | 
In file included from sysproc.c:5:
memlayout.h:8: note: this is the location of the previous definition
    8 | #define KERNBASE 0x80000000         // First kernel virtual address
      | 
In file included from sysproc.c:6:
sysproc.c: In function ‘wmap’:
mmu.h:90:41: error: statement with no effect [-Werror=unused-value]
   90 | #define PGROUNDUP(sz)  (((sz)+PGSIZE-1) & ~(PGSIZE-1))
      |                        ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~
sysproc.c:112:9: note: in expansion of macro ‘PGROUNDUP’
  112 |         PGROUNDUP(addr);
      |         ^~~~~~~~~
sysproc.c: In function ‘wunmap’:
sysproc.c:334:31: error: passing argument 1 of ‘kfree’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  334 |                         kfree(temp);
      |                               ^~~~
      |                               |
      |                               struct lazy *
In file included from sysproc.c:3:
defs.h:68:23: note: expected ‘char *’ but argument is of type ‘struct lazy *’
   68 | void            kfree(char*);
      |                       ^~~~~
sysproc.c: In function ‘wremap’:
sysproc.c:348:19: error: pointer targets in passing argument 2 of ‘argint’ differ in signedness [-Werror=pointer-sign]
  348 |         argint(0, &oldaddr);
      |                   ^~~~~~~~
      |                   |
      |                   uint * {aka unsigned int *}
In file included from sysproc.c:3:
defs.h:152:29: note: expected ‘int *’ but argument is of type ‘uint *’ {aka ‘unsigned int *’}
  152 | int             argint(int, int*);
      |                             ^~~~
sysproc.c:399:93: error: passing argument 2 of ‘walkpgdir’ makes pointer from integer without a cast [-Werror=int-conversion]
  399 |                                                 pte_t *pte = walkpgdir(myproc()->pgdir, temp->addr, 0); // update PTE
      |                                                                                         ~~~~^~~~~~
      |                                                                                             |
      |                                                                                             uint {aka unsigned int}
In file included from sysproc.c:3:
defs.h:189:53: note: expected ‘const void *’ but argument is of type ‘uint’ {aka ‘unsigned int’}
  189 | pte_t*          walkpgdir(pde_t *pgdir, const void *va, int alloc);
      |                                         ~~~~~~~~~~~~^~
sysproc.c:434:85: error: passing argument 2 of ‘walkpgdir’ makes pointer from integer without a cast [-Werror=int-conversion]
  434 |                                         pte_t *pte = walkpgdir(myproc()->pgdir, temp->addr, 0); // update PTE
      |                                                                                 ~~~~^~~~~~
      |                                                                                     |
      |                                                                                     uint {aka unsigned int}
In file included from sysproc.c:3:
defs.h:189:53: note: expected ‘const void *’ but argument is of type ‘uint’ {aka ‘unsigned int’}
  189 | pte_t*          walkpgdir(pde_t *pgdir, const void *va, int alloc);
      |                                         ~~~~~~~~~~~~^~
sysproc.c: In function ‘getpgdirinfo’:
sysproc.c:471:19: error: passing argument 2 of ‘argint’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  471 |         argint(0, &pdinfo);
      |                   ^~~~~~~
      |                   |
      |                   struct pgdirinfo **
In file included from sysproc.c:3:
defs.h:152:29: note: expected ‘int *’ but argument is of type ‘struct pgdirinfo **’
  152 | int             argint(int, int*);
      |                             ^~~~
sysproc.c: In function ‘wunmap’:
sysproc.c:339:1: error: control reaches end of non-void function [-Werror=return-type]
  339 | }
      | ^
cc1: all warnings being treated as errors
make: *** [<builtin>: sysproc.o] Error 1


test build FAILED
 (build xv6 using make)
 make failed (error 2)
 required file 'xv6.img' does not exist after make
 required file 'fs.img' does not exist after make

Skipped 36 tests.
To keep testing after failing a test, use flag '-c' or '--continue'
